Fix test for missing record types on Plan__c and add missing metadata for CampaignMember

--- a/src/classes/INT_InteractionProcessor_TEST.cls
+++ b/src/classes/INT_InteractionProcessor_TEST.cls
@@ -205,7 +205,7 @@ private class INT_InteractionProcessor_TEST {
             Active__c = true
         );
 
-        if (planRTInfo != null && planRTInfo.get('Academic Plan').getRecordTypeId() != null) {
+        if (planRTInfo != null && planRTInfo.containsKey('Academic Plan')) {
             acadPlan.put('RecordTypeId', planRTInfo.get('Academic Plan').getRecordTypeId());
         }
 
