Resolve issue #12 where insert null on checkbox would not work properly.

--- a/src/classes/INT_InteractionMappingService_TEST.cls
+++ b/src/classes/INT_InteractionMappingService_TEST.cls
@@ -1,17 +1,19 @@
 /*****************************************
 * File: INT_InteractionMappingService_TEST
 * Author: Sierra-Cedar
-* Description: Unit Tests for
+* Description: Unit Tests for INT_InteractionMappingService.cls
 ******************************************/
 @IsTest
 private class INT_InteractionMappingService_TEST {
-    @testSetup static void setUpTest() {
+    @testSetup 
+    static void setUpTest() {
         // Create and insert Interaction Mapping Test Data
         List<Interaction_Mapping__c> testMappings = INT_TestDataFactory.createTestMappings();
         insert testMappings;
     }
 
-    static testMethod void testCreateContact() {
+    @isTest
+    static void testCreateContact() {
         // Arrange
         Interaction__c testInteraction = new Interaction__c(
             First_Name__c = 'Test',
@@ -35,7 +37,8 @@ private class INT_InteractionMappingService_TEST {
         System.assert(c.LastName == 'Contact');
     }
 
-    static testMethod void testCreateContactExcludedSources() {
+    @isTest
+    static void testCreateContactExcludedSources() {
         // Arrange
         Interaction__c testInteraction = new Interaction__c(
             First_Name__c = 'Test',
@@ -59,5 +62,32 @@ private class INT_InteractionMappingService_TEST {
         // Interaction data should NOT be copied over since we exclude Webform Sources
        	System.assert(c.FirstName == 'Something');
        	System.assert(c.LastName == 'Else');
+    }
+
+    @isTest
+    static void testMapFromLeadSources() {
+        // Arrange
+        Lead testLead = new Lead(
+            FirstName = 'Test',
+            LastName = 'Lead',
+            Email = 'test@nomail.com',
+            Company = 'Lead, Test'
+        );
+
+        Interaction__c testInteraction = new Interaction__c(
+            First_Name__c = '',
+            Last_Name__c = 'Lead',
+            Interaction_Status__c = 'New',
+            Interaction_Source__c = 'Webform'
+        );
+
+        // Act
+        Test.startTest();
+        INT_InteractionMappingService interactionMapping = new INT_InteractionMappingService();
+        interactionMapping.applyDataToInteraction(testLead, testInteraction);
+        Test.stopTest();
+
+        // Assert
+        System.assertEquals('Test', testInteraction.First_Name__c, 'The first name on Lead should have been copied to the Interaction as per the mappings.');
     }
 }
